force-app/main/default/objects/Capability_Template__c/Capability_Template__c.object-meta.xml
<CustomObject>
    <label>Capability Template</label>
    <pluralLabel>Capability Templates</pluralLabel>
    <nameField>
        <label>Template Number</label>
        <type>AutoNumber</type>
        <displayFormat>TPL-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Master template for Salesforce Cloud capability maps. Contains categories and capability items that can be applied to projects.</description>
</CustomObject>