force-app/main/default/objects/Capability_Template__c/fields/Cloud_Category__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Category__c</fullName>
    <label>Cloud Category</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core CRM</fullName>
                <default>true</default>
                <label>Core CRM</label>
            </value>
            <value>
                <fullName>Marketing and Commerce</fullName>
            </value>
            <value>
                <fullName>Industry Clouds</fullName>
            </value>
            <value>
                <fullName>Data and Analytics</fullName>
            </value>
            <value>
                <fullName>Integration and Platform</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>