force-app/main/default/objects/Capability_Template__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon Name</label>
    <type>Text</type>
    <length>50</length>
</CustomField>