force-app/main/default/objects/Capability_Template__c/fields/Is_Standard__c.field-meta.xml
<CustomField>
    <fullName>Is_Standard__c</fullName>
    <label>Is Standard</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>