force-app/main/default/objects/Capability_Template__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Display name for the template (e.g., Sales Cloud, Service Cloud)</description>
</CustomField>