force-app/main/default/objects/Capability_Template__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
    <defaultValue>"1.0"</defaultValue>
</CustomField>